--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Random Palette</title>
+	<title>Random Material</title>
 	<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" title="no title" charset="utf-8">
 	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200' rel='stylesheet' type='text/css'>
 
 	</head>
 <body>
-	<h1>Random | Palette</h1>
+	<h1>Random | Material</h1>
 
 	<div class="upbackground">
 	<script src="js/app.js" type="text/javascript" charset="utf-8"></script>	
